tests/fail/destruct_named_mix_fail.tk
shape Point(x: i32, y: i32)

fn main() -> i32 {
    auto p = Point(x = 10, y = 20)
    auto Point(a = .x, b) = p
    return 0
}
